[tool.poetry]
name = "restaurantreservation"
version = "0.1.0"
description = "Full Stack Application for scheduling reservations to restaurants."
authors = ["Gregory Thomas <gdenvert13@gmail.com>"]
include = []

[tool.poetry.dependencies]
python = "^3.7.5"
flask = "^2.0.1"
flask-sqlalchemy = "^2.5.1"
sqlalchemy = "^1.4.15"
flask-migrate = "^3.0.0"
flask-cors = "^3.0.10"
python-jose = "^3.2.0"
psycopg2 = "^2.8.6"
pandas = "^1.2.4"
SQLAlchemy-Utils = "^0.37.4"

[tool.poetry.dev-dependencies]
requests = "^2.25.1"
coverage = "^5.5"
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
